# ros2-robot-sim

./: README.md
log/: latest_list
simple_robot_description/: CMakeLists.txt  package.xml
simple_robot_description/config/: ros_gz_bridge.yaml
simple_robot_description/launch/: display.launch.py  gazebo.launch.py
simple_robot_description/log/: latest_list
simple_robot_description/rviz/: simple_robot.rviz
simple_robot_description/urdf/: simple_robot.urdf
simple_robot_description/worlds/: empty.sdf  house_world.sdf
